--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "prettier": "^2.3.0"
   },
   "dependencies": {
+    "install": "^0.13.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0"
   },
   "browserslist": [
     "last 2 Chrome versions"
