--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "install": "^0.13.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0"
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.1.2"
   },
   "browserslist": [
     "last 2 Chrome versions"
