--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
-    "redux": "^4.1.2"
+    "redux": "^4.1.2",
+    "redux-observable": "^2.0.0",
+    "rxjs": "^7.4.0"
   },
   "browserslist": [
     "last 2 Chrome versions"
