--- a/.babelrc
+++ b/.babelrc
@@ -5,6 +5,22 @@
       {
         "runtime": "automatic"
       }
-    ]
-  ]
+    ],
+    "@babel/preset-env"
+  ],
+  "plugins": ["@babel/plugin-proposal-class-properties"],
+  "env": {
+    "test": {
+      "presets": [
+        [
+          "@babel/preset-env",
+          {
+            "targets": {
+              "node": "current"
+            }
+          }
+        ]
+      ]
+    }
+  }
 }
